--- a/cherryleer-demo-client/pom.xml
+++ b/cherryleer-demo-client/pom.xml
@@ -6,11 +6,11 @@
 
     <parent>
         <artifactId>cherryleer-demo</artifactId>
-        <groupId>me.andpay.ti</groupId>
+        <groupId>com.cherryleer.rpc</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>me.andpay.ti</groupId>
+    <groupId>com.cherryleer.rpc</groupId>
     <artifactId>cherryleer-demo-client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>cherryleer-demo-client</name>
@@ -18,7 +18,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>me.andpay.ti</groupId>
+            <groupId>com.cherryleer.rpc</groupId>
             <artifactId>cherryleer-demo-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
